--- a/.github/workflows/build-amlogic-s9xxx.yml
+++ b/.github/workflows/build-amlogic-s9xxx.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android 2>/dev/null
           sudo -E apt-get -y update
-          sudo -E apt-get -y install pigz1
+          sudo -E apt-get -y install pigz
           sudo -E apt-get -y install tree
           sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
           sudo -E apt-get -y autoremove --purge
