--- a/.github/workflows/build-amlogic-s9xxx.yml
+++ b/.github/workflows/build-amlogic-s9xxx.yml
@@ -38,11 +38,11 @@ jobs:
         run: |
           sudo timedatectl set-timezone "${TZ}"
           sudo mkdir -vp amlogic-s9xxx-armbian/build/output/images/
-          cd amlogic-s9xxx-armbian/build/output/images/ && wget http://armbian.hosthatch.com/archive/odroidn2/archive/Armbian_21.08.1_Odroidn2_bullseye_current_5.10.60.img.xz
+          cd amlogic-s9xxx-armbian/build/output/images/ && sudo wget http://armbian.hosthatch.com/archive/odroidn2/archive/Armbian_21.08.1_Odroidn2_bullseye_current_5.10.60.img.xz
      
       - name: Repacking
         run: |
-          chmod +x amlogic-s9xxx-armbian/rebuild
+          sudo chmod +x amlogic-s9xxx-armbian/rebuild
           cd amlogic-s9xxx-armbian/ && sudo ./rebuild -b $PROC_LISTS -k $KERNEL_VR -r $KERNEL_REPO -a false
           echo "BUILD_TAG=Armbian-$(date +"%Y.%m.%d")" >> ${GITHUB_ENV}
  
