--- a/.github/workflows/build-amlogic-s9xxx.yml
+++ b/.github/workflows/build-amlogic-s9xxx.yml
@@ -23,8 +23,7 @@ jobs:
         run: |
           sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android 2>/dev/null
           sudo -E apt-get -y update
-          sudo -E apt-get -y install pigz
-          sudo -E apt-get -y install tree
+          sudo -E apt-get -y install pigz tree xz-utils
           sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
@@ -38,7 +37,7 @@ jobs:
         run: |
           sudo timedatectl set-timezone "${TZ}"
           sudo mkdir -vp amlogic-s9xxx-armbian/build/output/images/
-          cd amlogic-s9xxx-armbian/build/output/images/ && sudo wget http://armbian.hosthatch.com/archive/odroidn2/archive/Armbian_21.08.1_Odroidn2_bullseye_current_5.10.60.img.xz && sudo tar xzvf *.xz
+          cd amlogic-s9xxx-armbian/build/output/images/ && sudo wget http://armbian.hosthatch.com/archive/odroidn2/archive/Armbian_21.08.1_Odroidn2_bullseye_current_5.10.60.img.xz && sudo unxz *.xz
      
       - name: Repacking
         run: |
